src/integration/snapshots/rustclean__integration__screens__theme-report-none-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Largest files — /Users/demo  │  17 rows, 8.6 GiB (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
      Size        Count      Modified         Location
▶ [ ]     3.0 GiB            2025-08-27 12:00 Downloads/Xcode_16.xip
  [ ]     2.3 GiB            2025-02-28 12:00 Movies/holiday-2024.mp4
  [ ]   900.0 MiB            2026-08-22 12:00 Movies/screen-recording.mov
  [ ]   820.0 MiB            2026-06-03 12:00 Projects/api/target/debug/api
  [ ]   610.0 MiB            2026-09-30 12:00 Library/Caches/com.example.browser/cache.db
  [ ]   450.0 MiB            2026-03-15 12:00 Downloads/setup.dmg
  [ ]   310.0 MiB            2026-09-28 12:00 Projects/web/node_modules/react/index.js
  [ ]   150.0 MiB            2026-08-02 12:00 Applications/Sketchpad.app/Contents/MacOS/Sketchpad
  [ ]   120.0 MiB            2026-09-19 12:00 Downloads/photos.zip
  [ ]    55.0 MiB            2026-09-11 12:00 Library/Application Support/com.example.sketchpad/stat
  [ ]     4.0 MiB            2025-12-05 12:00 Documents/taxes-2025.pdf
  [ ]     3.0 MiB            2026-09-29 12:00 Downloads/report.pdf
  [ ]    16.0 KiB            2026-09-30 12:00 Documents/notes.md
  [ ]     4.0 KiB            2026-07-03 12:00 Documents/README.md
  [ ]     4.0 KiB            2026-06-03 12:00 Projects/api/Cargo.toml
  [ ]     4.0 KiB            2026-09-28 12:00 Projects/web/README.md
  [ ]     4.0 KiB            2026-09-28 12:00 Projects/web/package.json







────────────────────────────────────────────────────────────────────────────────────────────────────
Enter: open the file's folder
 ↑↓  move   Space  to basket   t  all   f  age filter   x  move to trash   S  basket   Enter  open /
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 -/- BOLD | REVERSED
 1: 36+7 -/- BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 -/- BOLD | REVERSED
29: 0+4 -/- REVERSED | 11+7 -/- REVERSED | 30+3 -/- REVERSED | 39+3 -/- REVERSED | 55+3 -/- REVERSED | 74+3 -/- REVERSED | 86+7 -/- REVERSED
