src/integration/snapshots/rustclean__integration__screens__theme-tools-colorblind-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Geliştirici araçları temizliği  │  geri kazanılabilir: 6.8 GiB (ölçülüyor…)
────────────────────────────────────────────────────────────────────────────────────────────────────
  Araç                               Kazanılır    Ayrıntı
▶ Docker                                  6.0 GiB 3 images, 2 volumes
  npm önbelleği                         800.0 MiB ~/.npm
  Cargo indirme önbelleği            ⠋            ölçülüyor…
  pip önbelleği                      —            not installed
  Gradle önbelleği                   —            daemon not running















────────────────────────────────────────────────────────────────────────────────────────────────────
┌ İşlemler ────────────────────────────────────────────────────────────────────────────────────────┐
│ yeniden indirilir  docker system prune                                                           │
│    $ docker system prune                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ölçüm yalnızca okur. Hiçbir komut siz onaylamadan çalışmaz.
 ↑↓  seç   Enter  temizle   r  yeniden ölç   m  menü   Esc  geri   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Indexed(74) BOLD
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+13 White/- BOLD | 37+12 -/- BOLD
 5: 2+23 White/- BOLD | 37+12 Indexed(74)/- | 50+10 Indexed(74)/-
 6: 2+13 Gray/- | 37+12 Gray/- | 50+13 Gray/-
 7: 2+16 White/- BOLD | 37+12 Indexed(214)/- | 50+18 Indexed(214)/-
24: 0+1 DarkGray/- | 1+10 White/- BOLD | 11+89 DarkGray/-
25: 0+1 DarkGray/- | 1+19 Black/Indexed(214) | 20+20 White/- BOLD | 99+1 DarkGray/-
26: 0+1 DarkGray/- | 1+25 Gray/- | 99+1 DarkGray/-
27: 0+100 DarkGray/-
28: 0+100 Gray/-
29: 0+4 Black/Gray | 10+7 Black/Gray | 27+3 Black/Gray | 44+3 Black/Gray | 54+5 Black/Gray | 66+3 Black/Gray
