src/integration/snapshots/rustclean__integration__screens__theme-tools-none-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  Geliştirici araçları temizliği  │  geri kazanılabilir: 6.8 GiB (ölçülüyor…)
────────────────────────────────────────────────────────────────────────────────────────────────────
  Araç                               Kazanılır    Ayrıntı
▶ Docker                                  6.0 GiB 3 images, 2 volumes
  npm önbelleği                         800.0 MiB ~/.npm
  Cargo indirme önbelleği            ⠋            ölçülüyor…
  pip önbelleği                      —            not installed
  Gradle önbelleği                   —            daemon not running















────────────────────────────────────────────────────────────────────────────────────────────────────
┌ İşlemler ────────────────────────────────────────────────────────────────────────────────────────┐
│ yeniden indirilir  docker system prune                                                           │
│    $ docker system prune                                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ölçüm yalnızca okur. Hiçbir komut siz onaylamadan çalışmaz.
 ?  yardım   ↑↓  seç   Enter  temizle   r  yeniden ölç   m  menü   Esc  geri   q  çık
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 -/- BOLD | REVERSED
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 -/- BOLD | REVERSED
 4: 2+13 -/- BOLD | 37+12 -/- BOLD
 5: 2+23 -/- BOLD
 7: 2+16 -/- BOLD
24: 1+10 -/- BOLD
25: 1+19 -/- REVERSED | 20+20 -/- BOLD
29: 0+3 -/- REVERSED | 12+4 -/- REVERSED | 22+7 -/- REVERSED | 39+3 -/- REVERSED | 56+3 -/- REVERSED | 66+5 -/- REVERSED | 78+3 -/- REVERSED
